client/main.css
nav[class="navbar navbar-default"]{
    background: #eeeeee;
    padding: 0px 0px 0px 0px;
    text-align: left;
    text-indent: 10px;
    margin: 0px 0px 0px 0px;
    border: #eeeeee;
}

ul[class="navbar nav-pills navbar-default"]{
    background: #eeeeee;
    border-radius: 1px;
    padding: none;
    left: 0px;
    padding: 0px 0px 0px 0px;
    vertical-align: middle;
    text-align: center;
    margin-left: 0px;
    position: relative;
    border: #eeeeee;
    box-shadow: 0 2px 2px -2px rgba(0,0,0,0.2);
}

#main-pane {
    top: 10px;
    bottom: 10px;
    left: 30px;
    right: 30px;
    padding-top: 10px;
    overflow: auto;
    position: absolute;
}

#login {
    float: right;
    vertical-align: middle;
    padding-top: 15px;
    right: 30px;
    position: absolute;
}

#error{
    color:red;
}

.tag {
    cursor: pointer;
    float: left;
    margin: 0px 0px 0px;
    padding: 15px 8px 15px 10px;
    font-size: 120%;
    text-align: center;
    border-radius: 10px;
    /*background: #999999;
    color: orange;
    border-radius: 4px;
    opacity: 1;
    transition: opacity 0.3s linear;*/
    position: relative;
}

.menu-options {
    padding-left: 10px;
    vertical-align: middle;
    position: absolute;
}



ul {
    list-style-type: none;
}

#new-todo-box {
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 60px;
    margin-right: 20px;
    font-size: 160%;
    position: relative;
    height: 40px;
}

#new-todo {
    position: absolute;
    width: 100%;
}

#items-view {
    margin-top: 5px;
    margin-left: 5px;
}

#item-list .todo {
    display: block;
    height: 50px;
    position: relative;
    overflow: hidden;
}

#item-list .todo .destroy {
    cursor: pointer;
    position: absolute;
    left: 5px;
    top: 15px;
    height: 20px;
    width: 20px;
}

#item-list .todo .display, #item-list .todo .edit {
    margin-left: 30px;
    height: 100%;
    width: auto;
    float: left;
    padding-top: 18px;
    line-height: 1;
}

#todo-input {
    width: 300px;
    position: relative;
    top: -3px;
}

#item-list .todo .destroy:hover {
    background-position: 0 -20px;
}

#item-list .todo .item-tags {
    overflow: auto;
    float: right;
    margin-right: 8px;
}

#item-list .todo .item-tags .tag {
    margin-top: 15px;
}

#item-list .todo .item-tags .removable_tag {
    padding-right: 22px;
}

#item-list .todo .item-tags .tag .remove {
    position: absolute;
    top: 0;
    right: 4px;
    bottom: 0;
    width: 16px;
    background: url("/close_16.png") no-repeat 0 center;
}

#item-list .todo .item-tags .tag .remove:hover {
    background-position: -16px center;
}

#item-list .todo .item-tags div.addtag {
    background: none;
    color: #333;
    border: 1px dashed #999;
}

#item-list .todo .check {
    float: left;
    width: 25px;
}

#item-list .todo .todo-text {
    float: left;
    margin-left: 10px;
    font-size: 100%;
}

#item-list .todo .edit input {
    margin-left: 35px;
}

#edittag-input {
    width: 80px;
}

.large-input{
    height: 100%    !important;
}

.active{
    background-color: grey;
}

